--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "url": "https://github.com/LucasRosello/ZyrohAPI.git"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.3.1",
     "mongoose": "^5.9.20"
   },
   "devDependencies": {
