--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.3.1",
-    "mongoose": "^5.9.20"
+    "mongoose": "^5.9.20",
+    "nodemailer": "^6.4.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
